--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="divtext2">Olá, atualmente atuo como Front-end Júnior com intuito de me consolidar um Full-stack,
          estou me aperfeiçoando cada vez mais com cursos. Atualmente curso o ensino médio,
          tenho 17 anos, faço curso de Front-end no <b><span>Senai</span></b>, Sql no <b><span>Alura</span></b> e estou em busca de empresas 
-         que tenha o objetivo de ensinar e buscar novos taletons.</div>
+         que tenha o objetivo de ensinar e buscar novos taletos.</div>
         </center>
 </div>
 <div class="divserviço" id="serviço"><center><b><big>Serviços</big></b><br><br>--<span>Que eu ofereço</span>--</center><br>
